# qupytex

./: .gitignore  LICENSE  README.md  exec_phase_diagram_detection.py  pyproject.toml  requirements.txt
qphaset/: annni.py  exact_diag.py  fidelity.py  filters.py  generate-cluster.py  linalg.py  models.py  phases.py  qfim.py  rydberg.py
qphaset/notebooks/: dmrg-cluster-francesco.ipynb  dmrg-ising-1.ipynb  gap-plot.ipynb  generalized-k-rdms.ipynb  grad-conv-kernel.ipynb  order-param-discovery-rk1.ipynb  pauli-decomposition.ipynb
src/: exec_comparison.py  exec_dmrg.py  exec_dmrg_multiprocessing.py  exec_order_parameter_discovery.py  exec_phase_diagram_detection.py  qupytex_io.py
src/qphaset/: __init__.py  cluster.py  fidelity.py  generate-cluster-1D.py  models.py  phases.py  plotting.py  run.py  tjv_model.py
src/qphaset/notebooks/: analysis-order-param.ipynb  convert-pkl-to-h5.ipynb  dmrg-annni-2.ipynb  dmrg-annni-francesco.ipynb  final-dmrg.ipynb  final-global-vs-local-fidelity.ipynb  final-order-param-discovery.ipynb  g-data-export.ipynb  order-param-discovery-beta.ipynb  order-param-discovery-copy.ipynb  order-param-discovery.ipynb  order-param-discovery_nicola.ipynb  phase-diagram-detection-final.ipynb  test-ANNNI-initialization.ipynb  test-adaptive-dmrg-sampling.ipynb  test-phase-transitions-indep-rdms.ipynb  test-phase-transitions.ipynb
src/qupytex/: __init__.py  uhlmann_kernel.py  utils.py
src/qupytex/applications/0_ISING/: binary_classification.py  create_dataset.py  purity_check.py
tests/0_ISING/: gs_and_qpt.py
