[build-system]
requires = ["setuptools >= 68.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qupytex"
version = "2023.0.0"
description = "Quantum Phase Transition Explorer in Python"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "BSD-3-Clause"}
authors = [
    {name="Francesco Di Marcantonio", mail="francesco.di.marcantonio@cern.ch"},
    {name="Nicola Mariella", mail="aljabr0101@gmail.com"},
    ]
maintainers = [
    {name="Francesco Di Marcantonio", mail="francesco.di.marcantonio@cern.ch"}
]
keywords = ["quantum phase transition", "quantum many-body system", "quantum machine learning", "quantum kernel", "Uhlmann distance"]
classifiers = [
    License :: OSI Approved :: BSD License
    Operating System :: Microsoft :: Windowss
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3.12
]
dependencies = [
  "numpy",
  "scipy",
]

dynamic = ["version", "readme"]

[project.urls]
Repository = "https://github.com/Fradm98/qupytex.git"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "qupytex.VERSION"}
readme = {file = "README.md"}