[build-system]
requires = ["setuptools >= 68.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qupytex"
version = "2023.0.0"
description = "Quantum Phase Transition Explorer in Python"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name="Francesco Di Marcantonio", email="francesco.di.marcantonio@cern.ch"},
    {name="Nicola Mariella", email="aljabr0101@gmail.com"},
    ]
maintainers = [
    {name="Francesco Di Marcantonio", email="francesco.di.marcantonio@cern.ch"}
]
keywords = ["quantum phase transition", "quantum many-body system", "quantum machine learning", "quantum kernel", "Uhlmann distance"]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3.12"
]

dependencies = [
  "numpy",
  "scipy",
  "qs-mps"
]

[project.urls]
Repository = "https://github.com/Fradm98/qupytex.git"


[project.scripts]
qupytex-Uhlmann = "qupytex:uhlmann_kernel"

[tool.setuptools.packages.find]
where = ["src"]
